--- a/posts/26_2024.md
+++ b/posts/26_2024.md
@@ -7,7 +7,7 @@ I came up with the idea to blog every week and the title of the blog would corre
 
 Personal life updates:
 
-I was pretty occupied this week, as I enrolled for Badminton coaching (Yes, finally went through after weeks of waiting). I thought I knew how to play the sport, but playing on wooden court compared to narrow streets in your hometown with cousins is a whole different ball game (It was fun though). Lesson one was how to hold the racquet, and guess what, I've been holding it the wrong all long. I know right, the basics. I used to think that you improve in badminton by just playing badminton, but I was completely wrong. You start with warmup, do the drills, just toss the receives with back hand, forehand and smash, collect shuttles in a batch of 15 (I hate it thought), do ladder drills and by the time your body gives up, the best part of the sport arrives. It's doubles play time. The first day was spot on, I'm ecstatic that I took the odds.
+I was pretty occupied this week, as I enrolled for Badminton coaching (Yes, finally went through after weeks of waiting). I thought I knew how to play the sport, but playing on wooden court compared to narrow streets in your hometown with cousins is a whole different ball game (It was fun though). Lesson one was how to hold the racquet, and guess what, I've been holding it the wrong all long. I know right, the basics. I used to think that you improve in badminton by just playing badminton, but I was completely wrong. You start with warmup, do the drills, just toss the receives with back hand, forehand and smash, collect shuttles in a batch of 15 (I hate it though), do ladder drills and by the time your body gives up, the best part of the sport arrives. It's doubles play time. The first day was spot on, I'm ecstatic that I took the odds.
 
 <img src="images/1.jpg" width="500" height="500"/>
 
