Added more events for the week of 26/2024

--- a/posts/26_2024.md
+++ b/posts/26_2024.md
@@ -1,6 +1,6 @@
 ---
 title: Weekly notes 26/2024
-publish_date: 2024-06-26
+publish_date: 2024-06-30
 ---
 
 I came up with the idea to blog every week and the title of the blog would correspond to "Weekly notes {Week number}/{Year}". The idea is to publish contents at the end of the week, so mostly weekends. 
@@ -16,6 +16,11 @@ I've reached a personal milestone in Swimming. 25th June, 2024 is D-DAY when I s
 I've started maintaining physical notes for Japanese. Learning on iPad is super helpful as it gives the flexibility to undo the characters and free flow, but when it comes to writing on paper you have to make sure to adjust the strokes and curves within a box without undo-ing it. Currently, I'm done with Hiragana + Dakuten & handakuten + Yoon and Katakana till N-th level. Target is to complete Katakana by the end of this week and practice more on Kana app. 
 
 <img src="images/2.jpg"/>
+
+Went out with my ex-intern gang to Lonavala for a 2 day leisure trip. This was our first road trip and it turned out to be a perfect getaway with perfect weather. We booked this <a href="https://www.airbnb.co.in/rooms/996811613437627864?check_in=2024-07-19&check_out=2024-07-20&guests=1&adults=1&s=67&unique_share_id=9cf6a40c-d1cd-4c41-811a-98bc6bdf98d1">amazing property</a> from Airbnb
+
+<img src="images/4.jpeg"><br/><br/>
+<img src="images/5.jpeg">
 
 Professional life updates:
 
