--- a/posts/26_2024.md
+++ b/posts/26_2024.md
@@ -17,7 +17,7 @@ I've started maintaining physical notes for Japanese. Learning on iPad is super 
 
 <img src="images/2.jpg"/>
 
-Went out with my ex-intern gang to Lonavala for a 2 day leisure trip. This was our first road trip and it turned out to be a perfect getaway with perfect weather. We booked this <a href="https://www.airbnb.co.in/rooms/996811613437627864?check_in=2024-07-19&check_out=2024-07-20&guests=1&adults=1&s=67&unique_share_id=9cf6a40c-d1cd-4c41-811a-98bc6bdf98d1">amazing property</a> from Airbnb
+Went out with my ex-intern gang to Lonavala for a 2 day leisure trip. This was our first road trip and it turned out to be a perfect getaway with perfect weather. We booked this <a href="https://www.airbnb.co.in/rooms/996811613437627864?check_in=2024-07-19&check_out=2024-07-20&guests=1&adults=1&s=67&unique_share_id=9cf6a40c-d1cd-4c41-811a-98bc6bdf98d1">property</a> from Airbnb. I'd rate it 2.5/5. 
 
 <img src="images/4.jpeg"><br/><br/>
 <img src="images/5.jpeg">
