--- a/posts/27_2024.md
+++ b/posts/27_2024.md
@@ -11,12 +11,12 @@ Japanese: Finally, done with both Hiragana and Katakana!! I've started to build 
 
 Friends: This week, I met my friends from college. It's a blessing to be in the same city and meet them often. We visited Silver beach, it was pretty windy and rain storms as well. We had our coffee from [Bayleaf][bayleaf] but the experience was underwhelming. Which is why we next went to [Prithvi Cafe][prithvicafe] and had scrumptious breakfast. Later, we visited our college. There is something about the college, as soon as you reach the vicinity, nostalgia hits, everytime. We had some lip smacking vada pav's from Anand and made our way back home.
 
-Sports: I'm getting used to Badminton and lately I've been following videos of professionals playing doubles match. This is helping me understand the game play even better. It's a quick game, game of reflexes, especially doubles where you need to build up your stamina for a long run and sync with your partner and understand the next move, all at the same time. Pretty crazy right?
-
 <img src="images/6.jpg"><br/><br/>
 <img src="images/7.jpg"><br/><br/>
 <img src="images/8.jpg"><br/><br/>
 <img src="images/9.jpg"><br/><br/>
+
+Sports: I'm getting used to Badminton and lately I've been following videos of professionals playing doubles match. This is helping me understand the game play even better. It's a quick game, game of reflexes, especially doubles where you need to build up your stamina for a long run and sync with your partner and understand the next move, all at the same time. Pretty crazy right?
 
 Professional life udpates:
 
@@ -24,3 +24,7 @@ Completed another certification from Oracle, [OCI Gen AI Professional Certificat
 
 
 [genai]: https://catalog-education.oracle.com/pls/certview/sharebadge?id=F67BD6283AB8234D728282D816A54976A45617112A1D1DACB2814D6DEBDED163
+
+[prithvicafe]: https://g.co/kgs/nEfjD1N
+
+[bayleaf]: https://g.co/kgs/YZYXr8S
