--- a/posts/26_2024.md
+++ b/posts/26_2024.md
@@ -13,7 +13,7 @@ I was pretty occupied this week, as I enrolled for Badminton coaching (Yes, fina
 
 I've reached a personal milestone in Swimming. 25th June, 2024 is D-DAY when I swam without float . I've always been afraid of swimming, it always was synonymous to drowning in my dictionary. But I registered the core memory for the first time when I swam without any support. Although, It drained my stamina half way through the pool, but I won't complain. The target is to keep the momentum and learn newer strokes eventually. More to this in coming weeks.
 
-I've started maintaining physical notes for Japanese. Learning on iPad is super helpful as it gives the flexibility to undo the characters and free flow, but when it comes to writing on paper you have to make sure to adjust the strokes and curves within a box without undo-ing it. Currently, I'm done with Hiragana + Dakuten & handakuten + Yoon and Katakana till N-th level. Target is to complete Katakana by the end of this week and practice more on Kana app. 
+I've started maintaining physical notes for Japanese. Learning on iPad is super helpful as it gives the flexibility to undo the characters and free flow, but when it comes to writing on paper you have to make sure to adjust the strokes and curves within a box without undo-ing it. Currently, I'm done with Hiragana + Dakuon & Handakuon + Yoon and Katakana till N-th level. Target is to complete Katakana by the end of this week and practice more on Kana app. 
 
 <img src="images/2.jpg"/>
 
