--- a/posts/27_2024.md
+++ b/posts/27_2024.md
@@ -18,7 +18,7 @@ Friends: This week, I met my friends from college. It's a blessing to be in the 
 
 Sports: I'm getting used to Badminton and lately I've been following videos of professionals playing doubles match. This is helping me understand the game play even better. It's a quick game, game of reflexes, especially doubles where you need to build up your stamina for a long run and sync with your partner and understand the next move, all at the same time. Pretty crazy right?
 
-Professional life udpates:
+Professional life updates:
 
 Completed another certification from Oracle, [OCI Gen AI Professional Certification][genai], it was long due.
 
