--- a/posts/31_2024.md
+++ b/posts/31_2024.md
@@ -7,11 +7,11 @@ Completed 30 days streak on DuoLingo. While it was such a pain to even get 10 mi
 
 New words that I learned these week:
 
-コンビニ `Convenience Store`
-デパート `Department Store`
-どこ `Where`
-ここ `Here`
-そこ `There`
+コンビニ `Convenience Store` <br>
+デパート `Department Store` <br>
+どこ `Where` <br>
+ここ `Here` <br>
+そこ `There` <br>
 
 I've not been consistent with Swimming and Badminton in the past week. Even stopped with the early morning walks. Hopefully, I'll get back on track with these real soon.
 
