--- a/posts/32_2024.md
+++ b/posts/32_2024.md
@@ -7,7 +7,7 @@ Past week was a roller coaster in itself. I met my ex-intern gang, one of them g
 
 <img src="images/moka-pot.jpg"><br/><br/>
 
-Well, if we are talking coffee, I've lately been active on reddit, mostly on [r/IndiaCoffee][india-coffee-subreddit] subreddit. After some thorough research, I got myself a mid-dark roasted coffee from [Blue Tokai][bt], a speciality blend form Attikan Estate. And yeah, because I'm broke and I don't have the cash for Grinder, this one was pre-grounded coffee with Inverted AeroPress grind. Super pleased with the aroma and richness of the grounds. Will be posting my brewing instructions in the next blog (probably). 
+Well, if we are talking coffee, I've lately been active on reddit, mostly on [r/IndiaCoffee][india-coffee] subreddit. After some thorough research, I got myself a mid-dark roasted coffee from [Blue Tokai][bt], a speciality blend form Attikan Estate. And yeah, because I'm broke and I don't have the cash for Grinder, this one was pre-grounded coffee with Inverted AeroPress grind. Super pleased with the aroma and richness of the grounds. Will be posting my brewing instructions in the next blog (probably). 
 
 <img src="images/blue-tokai-attikan-estate-aeropress.jpg"><br/><br/>
 
@@ -36,6 +36,9 @@ These are the list of words which I mastered recently
 
 See you in the next one. Arigato-Gozaimasu
 
+
+[india-coffee]: https://www.reddit.com/r/IndiaCoffee/
+[bt]: https://www.reddit.com/r/IndiaCoffee/
 
 
 
