--- a/posts/32_2024.md
+++ b/posts/32_2024.md
@@ -5,17 +5,17 @@ publish_date: 2024-08-14
 
 Past week was a roller coaster in itself. I met my ex-intern gang, one of them got me amazing Limited Edition Moka post from Amsterdam (The Italian Version). It looks pretty good irl. I've ordered the stainless steel plate to place over the gas stove for Moka pot, to make sure I don't burn down the bottom chamber. Once that arrives, I cannot wait to brew some amazing Cotha's premium blend. 
 
-<img src="images/moka-pot.jpg"><br/><br/>
+<img src="images/moka-pot.jpg"><br/>
 
 Well, if we are talking coffee, I've lately been active on reddit, mostly on [r/IndiaCoffee][india-coffee] subreddit. After some thorough research, I got myself a mid-dark roasted coffee from [Blue Tokai][bt], a speciality blend form Attikan Estate. And yeah, because I'm broke and I don't have the cash for Grinder, this one was pre-grounded coffee with Inverted AeroPress grind. Super pleased with the aroma and richness of the grounds. Will be posting my brewing instructions in the next blog (probably). 
 
-<img src="images/blue-tokai-attikan-estate-aeropress.jpg"><br/><br/>
+<img src="images/blue-tokai-attikan-estate-aeropress.jpg"><br/>
 
 Me and my ex-intern gang normally visit WeWork (Chromium), like one in two weeks. The place is fun overall with unlimited coffee and some amazing views through glass windows, plus it's always a good time to catch up with your mates. The last week visit was a tad bit emotional as well, because WeWork is shutting down in Chromium. Yes, we do have a alternative, but this was our go-to place. 
 
-<img src="images/gm-intern-last-day-chromium.jpg"><br/><br/>
+<img src="images/gm-intern-last-day-chromium.jpg"><br/>
 
-<img src="images/chromium-view.jpg"><br/><br/>
+<img src="images/chromium-view.jpg"><br/>
 
 DuoLingo has been kind enough to provide me a 3 day premium (again). The premium gives me a leverage to make mistakes and rectify, although it spoils me with the freedom to make mistakes. I recently discoverd that you can get the list of learned words (more like flash card) from DuoLingo, this is going to help me to revise (more like spaced repetition technique).
 
